add create user api
Signed-off-by: Rick Henry <fredericmhenry@gmail.com>

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -6,6 +6,8 @@ services:
       context: .
     volumes:
       - ./app:/app
+    ports:
+      - 8000:8000
     command: >
       sh -c "python manage.py wait_for_db && 
              python manage.py migrate &&
