--- a/requirements.txt
+++ b/requirements.txt
@@ -2,3 +2,5 @@ Django>=2.1.3
 djangorestframework>=3.9.0,<3.10.0
 flake8>=3.6.0,<3.7.0
 psycopg2>=2.7.5,<2.8.0
+pytest>=4.1.0,<4.2.0
+pytest-django>=3.4.4,<3.5.0
