--- a/requirements.txt
+++ b/requirements.txt
@@ -5,3 +5,5 @@ psycopg2>=2.7.5,<2.8.0
 pytest>=4.1.0,<4.2.0
 pytest-django>=3.4.4,<3.5.0
 Pillow>=5.3.0,<5.4.0
+gunicorn>=19.9.0,<19.10.0
+django-environ>=0.4.5,<0.5.0
