--- a/.travis.yml
+++ b/.travis.yml
@@ -1,4 +1,12 @@
 language: python
+env:
+  - SECRET_KEY=testsecretkey
+  - ALLOWED_HOSTS=localhost,app
+  - DEBUG=False
+  - DB_HOST=db
+  - DB_USER=postgres
+  - DB_NAME=app
+  - POSTGRES_PASSWORD=testdbpass
 python:
   - "3.6"
 
