--- a/.travis.yml
+++ b/.travis.yml
@@ -13,7 +13,9 @@ python:
 services:
   - docker
 
-before_script: pip install docker-compose
+before_script:
+  - pip install docker-compose
+  - cp .env.test .env
 
 script:
-  - docker-compose run app sh -c "python manage.py test && flake8"
+  - docker-compose run app sh -c "pytest --disable-pytest-warnings && flake8"
