--- a/.travis.yml
+++ b/.travis.yml
@@ -10,6 +10,7 @@ services:
 before_script:
   - pip install docker-compose
   # - cp .env.test .env
+#  - chmod a+rwX vol
 
 script:
   - docker-compose run app sh -c "pytest --disable-pytest-warnings && flake8"
