add ssl to development environment
Signed-off-by: Rick Henry <fredericmhenry@gmail.com>

--- a/config/nginx/django.conf
+++ b/config/nginx/django.conf
@@ -3,8 +3,26 @@ upstream app {
     server app:8000;
 }
 
+server {
+    location ~ /static(.*) {
+        root /vol/web/;
+    }
+    location ~ /media(.*) {
+        root /vol/web/;
+    }
+    listen 8000;
+    server_name localhost;
+    return 301 https://$host:8443$request_uri;
+}
+
 #portal
 server {
+    listen 8443 ssl;
+    server_name localhost;
+
+    ssl_certificate /etc/nginx/ssl/test.crt;
+    ssl_certificate_key /etc/nginx/ssl/test.key;
+
     location ~ /static(.*) {
         root /vol/web/;
     }
@@ -16,7 +34,4 @@ server {
         proxy_set_header Host $http_host;
         proxy_pass http://app/;
     }
-    listen 8000;
-    server_name localhost;
-
 }
