--- a/config/nginx2/django.conf
+++ b/config/nginx2/django.conf
@@ -3,8 +3,20 @@ upstream app2 {
     server app2:8001;
 }
 
+server {
+    listen 8001;
+    server_name localhost;
+    return 301 https://$host:8444$request_uri;
+}
+
 #portal
 server {
+    listen 8444 ssl;
+    server_name localhost;
+
+    ssl_certificate /etc/nginx/ssl/test.crt;
+    ssl_certificate_key /etc/nginx/ssl/test.key;
+
     location ~ /static(.*) {
         root /vol/web/;
     }
@@ -16,7 +28,4 @@ server {
         proxy_set_header Host $http_host;
         proxy_pass http://app2/;
     }
-    listen 8001;
-    server_name localhost;
-
 }
